# cdict

./: README-edit.md  README.md  changelog.txt  coverage.xml  pyproject.toml  release.sh
.github/workflows/: test.yml
docs/: appearance.html  customjson.html  frozenidict.html  identification.html  idict.html  idict_.html  index.html  let.html
docs/function/: higherorder.html  index.html  pandas.html
docs/serialization/: compression.html  customjson.html  index.html  parsing.html
docs/value/: cacheableival.html  dfival.html  entry.html  index.html  ival.html  lazyival.html  strictival.html
examples/: persistence.py
experiments/: basic.py  lazydf.py  serialization.py
src/cdict/: __init__.py  cd.py  customjson.py  frozencacheabledict.py  frozenidict.py  identification.py  idict_.py  let.py
src/cdict/value/: absival.py  customjson.py  ival.py  lazyival.py  strictival.py
src/hoshmap/: __init__.py  customjson.py  frozenidict.py  higherorder.py  identification.py  idict.py  idict_.py  let.py
src/hoshmap/function/: higherorder.py  pandas.py
src/hoshmap/serialization/: compression.py  customjson.py  parsing.py
src/hoshmap/value/: cacheableival.py  dfival.py  entry.py  ival.py  lazyival.py  strictival.py
tests/: test_ldict_.py  test_rshift.py
