[tool.poetry]
name = "cdict"
version = "1.211227.0"
description = "Cacheable lazy dict with deterministic predictable universally unique identifiers"
authors = ["davips <dpsabc@gmail.com>"]
license = "GPL"
readme = 'README.md'
packages = [
    { include = "cdict", from = "src" }
]

# For more dependencies and data persistence: poetry install -E full
#[tool.poetry.extras]
#full = ["sqlalchemy", "pandas"]

[tool.poetry.dependencies]
python = "^3.8"
#orjson = "^3.5.0"
#lange = "^0.2101.24"
#sqlalchemy = { version = "^1.4.23", optional = true }
#pandas = { version = "^1.3.3", optional = true }
hosh = "^1.211226.2"

[tool.poetry.dev-dependencies]
autoreadme = "^0.2102.20"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
black = "^21.7b0"
pdoc3 = "^0.10.0"
#pypiserver = "^1.4.2"
#passlib = "^1.7.4"
pylint = "^2.7.4"
#ipython = "^7.26.0"
#pandas = "^1.3.3"
#numpy = "^1.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "dvpypi"
#url = "http://localhost:8080/simple"
#secondary = true
